# purr_geographix

./: .gitignore  LICENSE  README.md  hello.txt  output.txt  purrio.sqlite  pyproject.toml  requirements.txt  scribbles.txt
docs/: colorado_north.json  index.html  openapi.json  survey.json
purr_geographix/: main.py  test.py  test2.py  test3.py
purr_geographix/api_modules/: crud.py  database.py  enum_utils.txt  models.py  routes_setup.py  schemas.py
purr_geographix/assets/collect/: handle_query.py  post_process.py  routes_assets.py  select_recipes.py  select_recipes.txt  select_templates.py  sql_helper.py  xformer.py
purr_geographix/assets/collect/recipes/: completion.py  core.py  dst.py  formation.py  ip.py  perforation.py  production.py  raster_log.py  survey.py  vector_log.py  well.py  zone.py
purr_geographix/assets/well/: routes_well.py  well.py
purr_geographix/common/: sqlanywhere.py  typeish.py  util.py
purr_geographix/core/: crud.py  database.py  logger.py  models.py  routes_settings.py  schemas.py  sqlanywhere.py  typeish.py  util.py
purr_geographix/prep/: setup.py
purr_geographix/recon/: epsg.py  recon.py  repo_db.py  repo_fs.py
