[tool.poetry]
name = "purr-geographix"
version = "0.1.2"
description = ""
authors = ["R. Bryan Hughes <bryan@purr.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"
loguru = "^0.7.2"
pyodbc = "^5.1.0"
alphashape = "^1.3.1"
retry = "^0.9.2"
types-retry = "^0.9.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true


# could not get scripts to work without getting
# ModuleNotFoundError: No module named 'uvicorn purr_geographix'
# instead do this within module directory (assuming poetry)
# poetry run uvicorn purr_geographix.main:app --reload

#[tool.poetry.scripts]
#start = "purr_geographix.main:run_dev"
#start-prod = "purr_geographix.main:run_prod"
# start-prod = "uvicorn purr_geographix.main:app --workers 4"