[tool.poetry]
name = "purr-geographix"
version = "0.1.5"
description = "Python API to extract JSON data from GVerse GeoGraphix projects"
authors = ["R. Bryan Hughes <bryan@purr.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
loguru = "^0.7.2"
pyodbc = "^5.1.0"
retry = "^0.9.2"
types-retry = "^0.9.9.4"
alphashape = "^1.3.1"
pandas = "^2.2.3"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true


[tool.poetry.scripts]
prep-purr-geographix = "purr_geographix.main:prep"
start-purr-geographix = "purr_geographix.main:start"